撮影台関連の実装

--- a/plugin.yml
+++ b/plugin.yml
@@ -31,5 +31,9 @@ permissions:
     default: op
   kametan.command.soba:
     default: op
+  kametan.command.tpa:
+      default: op
+  kametan.command.setphotostudio:
+    default: op
 
 ...
